invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_4.src
.IPPcode24
ADD LF@a int@49